# rimloc

./: .gitignore  README.md  pyproject.toml
.github/workflows/: tests.yml
rimloc/: __init__.py  checks.py  cli.py  defs.py  model.py  preview.py
tests/: test_rimloc.py
