[project]
name = "rimloc"
version = "0.1.0"
description = "Utilidades para mantener traducciones de mods de RimWorld"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
# Sin dependencias a propósito: todo con la librería estándar. Una herramienta
# de traducción tiene que seguir funcionando dentro de cinco años sin que nadie
# la mantenga, y cada dependencia es una forma de que eso no ocurra.
dependencies = []

# `preview` genera la carátula del Workshop y es lo único que necesita Pillow.
# Va como extra para que la regla de arriba siga siendo cierta donde importa:
# validar, comparar, sincronizar e instalar no dependen de nada, y son los que
# corren en CI. Si Pillow falta, `rimloc preview` lo dice y los demás siguen.
[project.optional-dependencies]
preview = ["Pillow>=10"]

[project.scripts]
rimloc = "rimloc.cli:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["rimloc*"]
